- Add logic to handle when ObjectExportDto name is null